# sudoku-solver

./: README.md  report.txt  sudoku-solver.cabal  test.py
app/: Main.hs  SudokuSolver.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
solved/: sudoku_0  sudoku_11  sudoku_12  sudoku_13  sudoku_14  sudoku_17  sudoku_18  sudoku_19  sudoku_2  sudoku_20  sudoku_27  sudoku_29  sudoku_31  sudoku_33  sudoku_34  sudoku_36  sudoku_37  sudoku_4  sudoku_42  sudoku_43  sudoku_45  sudoku_48  sudoku_9
to-be-solved/: sudoku_10_solved  sudoku_15_solved  sudoku_16_solved  sudoku_1_solved  sudoku_21_solved  sudoku_22_solved  sudoku_23_solved  sudoku_24_solved  sudoku_25_solved  sudoku_26_solved  sudoku_28_solved  sudoku_30_solved  sudoku_32_solved  sudoku_35_solved  sudoku_38_solved  sudoku_39_solved  sudoku_3_solved  sudoku_41_solved  sudoku_44_solved  sudoku_46_solved  sudoku_47_solved  sudoku_5_solved  sudoku_6_solved  sudoku_7_solved  sudoku_8_solved
