cabal-version:      2.4
name:               sudoku-solver
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable sudoku-solver
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, filepath ^>=1.4.2.2
    other-modules: SudokuSolver
    hs-source-dirs:   app
    default-language: Haskell2010
